Added sold-out-badge feature for products with inventory of 0

--- a/app/views/products/_product.html.erb
+++ b/app/views/products/_product.html.erb
@@ -19,5 +19,10 @@
 
   <aside class="price">
     <%= humanized_money_with_symbol product.price %>
-  </aside>
+  <% if product.quantity == 0 %>
+    </aside>
+      <aside class="sold-out">
+      SOLD OUT!
+    </aside>
+  <% end %>
 </article>
