--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,6 +10,16 @@
 
   <%= render 'layouts/top_nav' %>
 
+  <% if current_user %>
+    <div class="login-logout">
+    Signed in as <%= current_user.name %> | <%= link_to "Logout", '/sessions', method: :delete %>
+    </div>
+  <% else %>
+    <div class="login-logout">
+    <%= link_to 'Login', new_sessions_path %> | <%= link_to 'Signup', new_user_path %>
+    </div>
+  <% end %>
+
   <main class="container">
     <%= yield %>
   </main>
