--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -12,11 +12,11 @@
   </div>
   <div class="form-group">
     <%= f.label :password %>
-    <%= f.text_field :password, class: 'form-control' %>
+    <%= f.password_field :password, class: 'form-control' %>
   </div>
   <div class="form-group">
     <%= f.label :password_confirmation %>
-    <%= f.text_field :password_confirmation, class: 'form-control' %>
+    <%= f.password_field :password_confirmation, class: 'form-control' %>
   </div>
   <%= f.submit 'Submit', class: 'btn btn-primary' %>
 
