--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -25,6 +25,61 @@
         </dl>
       </div>
     </div>
+    <div>
+    <% if !@current_user %>
+      <br><div>
+        You must be logged in to leave a review
+      </div>
+    <% else %>
+      <br><h4>Leave a Review</h4>
+      <%= form_for [@product, @review] do |f| %>
+
+        <% if f.object.errors.any? %>
+          <div class="alert alert-danger">
+            <strong>The following errors prevented saving:</strong>
+            <ul>
+              <% f.object.errors.full_messages.each do |error| %>
+                <li><%= error %></li>
+              <% end %>
+            </ul>
+          </div>
+        <% end %>
+
+        <%= f.text_area :description %><br>
+        <%= f.label :rating %>
+        <%= f.select :rating, [["1",1], ["2",2], ["3",3], ["4", 4], ["5",5]], :include_blank => true %> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+        <%= f.submit "Post" %>
+      <% end %>
+    <% end %>
+      <br><h4>Reviews</h4>
+      <% if @product.reviews.size == 0 %>
+        <div class="review">
+          There are no reviews for this product
+        </div>
+      <% else %>
+        <% @reviews.order("id DESC").each do |rev| %>
+        <div class="review">
+          <table>
+            <tr>
+              <th>User:</th>
+              <th style="font-weight: normal"><%= rev.user.name %></th>
+            </tr>
+            <tr>
+              <th>Comment: &nbsp; &nbsp; &nbsp;</th>
+              <th style="font-weight: normal"><%= rev.description %></th>
+            </tr>
+            <tr>
+              <th>Rating:</th>
+              <th style="font-weight: normal"><%= rev.rating %></th>
+            </tr>
+          </table>
+          <% if current_user && rev.user.id == current_user.id %>
+            <%= link_to 'Delete this Comment', product_review_path(@product.id, rev.id), class: 'btn btn-sm btn-danger', method: :delete, data: { confirm: "Are you sure you want to delete this comment?" } %>
+          <% end %>
+        </div>
+        <% end %>
+      <% end %>
+    </div>
 
   </article>
 
