--- a/app/views/admin/dashboard/show.html.erb
+++ b/app/views/admin/dashboard/show.html.erb
@@ -1,2 +1,9 @@
-<h1>Admin::Dashboard#show</h1>
-<p>Find me in app/views/admin/dashboard/show.html.erb</p>
+<h1 style="border-bottom: 1px solid lightgrey; padding-bottom: 10px">Admin &raquo; Dashboard</h1>
+
+<br>
+<p>Navigate to the admin pages for the following sections of the site:</p>
+<br>
+<button><%= link_to 'Products',  [:admin, :products] %></button>
+<br>
+<br>
+<button><%= link_to 'Categories',  [:admin, :categories] %></button>
