--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,20 +10,25 @@
 
   <%= render 'layouts/top_nav' %>
 
+  <div class="login-logout">
   <% if current_user %>
-    <div class="login-logout">
+    <div>
     Signed in as <%= current_user.name %> | <%= link_to "Logout", '/sessions', method: :delete %>
     </div>
   <% else %>
-    <div class="login-logout">
+    <div>
     <%= link_to 'Login', new_sessions_path %> | <%= link_to 'Signup', new_user_path %>
     </div>
   <% end %>
+  </div>
 
   <main class="container">
     <%= yield %>
   </main>
 
   <%= yield :end_of_body %>
+  <br>
+  <br>
+  <br>
 </body>
 </html>
