--- a/app/assets/stylesheets/reviews.scss
+++ b/app/assets/stylesheets/reviews.scss
@@ -1,3 +1,8 @@
 .review {
-  margin: 20px 0 0 10px;
+  margin: 10px 0 10px 0;
+  border: 1px solid lightgrey;
+  border-radius: 4px;
+  background-color: #F8F8F8;
+  padding: 10px;
+  width: 100%;
 }
