--- a/app/views/admin/categories/index.html.erb
+++ b/app/views/admin/categories/index.html.erb
@@ -15,7 +15,7 @@
     <table class="table table-bordered">
       <thead>
         <tr>
-          <th colspan="2">Category</th>
+          <th colspan="2" style="background-color: #F5F5F5;">Category</th>
         </tr>
       </thead>
       <tbody>
