--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -26,11 +26,7 @@
       </div>
     </div>
     <div>
-    <% if !@current_user %>
-      <br><div>
-        You must be logged in to leave a review
-      </div>
-    <% else %>
+    <% if @current_user %>
       <br><h4>Leave a Review</h4>
       <%= form_for [@product, @review] do |f| %>
 
@@ -52,6 +48,11 @@
       <% end %>
     <% end %>
       <br><h4>Reviews</h4>
+      <% if !@current_user %>
+        <div class="review">
+          You must be logged in to leave a review
+        </div>
+      <% end %>
       <% if @product.reviews.size == 0 %>
         <div class="review">
           There are no reviews for this product
@@ -70,10 +71,15 @@
             </tr>
             <tr>
               <th>Rating:</th>
-              <th style="font-weight: normal"><%= rev.rating %></th>
+              <th style="font-weight: normal"><%= rev.rating %>/5</th>
+            </tr>
+            <tr>
+              <th>Posted:</th>
+              <th style="font-weight: normal"><%= rev.created_at.to_time.to_s.truncate(19, omission: '') %></th>
             </tr>
           </table>
           <% if current_user && rev.user.id == current_user.id %>
+            <br>
             <%= link_to 'Delete this Comment', product_review_path(@product.id, rev.id), class: 'btn btn-sm btn-danger', method: :delete, data: { confirm: "Are you sure you want to delete this comment?" } %>
           <% end %>
         </div>
