--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -3,7 +3,7 @@
 <%= form_for :user, url: users_path do |f| %>
 
   <% if @user && @user.errors.any? %>
-    <p>This is a test paragraph.</p>
+    <!-- <p>This is a test paragraph.</p> -->
     <div class="alert alert-danger">
       <strong>The following errors prevented saving:</strong>
       <ul>
